--- a/old-school.html
+++ b/old-school.html
@@ -2,7 +2,7 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 3 Exercise B
-Author(s)   : Jung-Hwan Park
+Author(s)   : Luke Ens, Jung-Hwan Park
 Submission  : Jan 29, 2024
 Description : Understanding Old-School HTML Layouts.
 =========================================================
@@ -102,6 +102,8 @@ Description : Understanding Old-School HTML Layouts.
 
                             <h3>A Breathtaking Journey</h3>
                             <p>Ansari, aboard the spacecraft Voyager X, ventured out into the void of space, capturing breathtaking views of Earth and conducting important research that could pave the way for future interstellar travel.</p>
+Earth and conducting important research that could pave the way for future interstellar travel.</p>
+rth and conducting important research that could pave the way for future interstellar travel.</p>
 
                             <h3>Pushing the Boundaries of Science</h3>
                             <p>The successful spacewalk not only demonstrates human resilience but also advances our understanding of space and our capabilities to explore further into the unknown.</p>
