--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@ Description : A simple HTML file for form tag.
 			<input type="url" id="homepage" name="homepage"></input><br>
 
             <label for="feedback">Feedback:</label><br>
-			<textarea id="feedback" name="feedback" style="font-size: large;"></textarea><br>
+			<textarea id="feedback" name="feedback" rows="4" cols="32"></textarea><br>
             <!-- Add some attributes to the feedback textarea tag to make it bigger and suitable for editing texts-->
             <!-- Add a file input field -->
             <label for="file">File:</label><br>
