--- a/styling.html
+++ b/styling.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 3 Exercise D
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Jung-Hwan Park, Luke Ens
+Submission  : Jan 29, 2024
 Description : Learning CSS.
 =========================================================
 -->
